<resources>
    <string name="app_name">School Share</string>
    <string name="text_alumni">School</string>
    <string name="text_share">Share</string>
    <string name="text_ccc">SCHOOL MANAGEMENT SOFTWARE</string>

    <string name="facebook_app_id">589913631198734</string>

    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_remember_password">Don\'t you remember your password?</string>
    <string name="text_login_caps">LOGIN</string>
    <string name="text_signup_caps">NO ACCOUNT YET? SIGNUP NOW</string>
    <string name="title_personal_info">Personal Information</string>
    <string name="title_activity_sign_up">Register</string>
    <string name="text_step_1">Step 1</string>
    <string name="text_step_2">Step 2</string>
    <string name="text_step_3">Step 3</string>
    <string name="text_step_4">Step 4</string>
    <string name="lvl_as_profile_as">Use profile as</string>
    <string name="lvl_fname">First Name<font color='@color/color1'>\u002A</font></string>
    <string name="lvl_mname">Middle Name</string>
    <string name="lvl_lname">Last Name<font color='@color/color1'>\u002A</font></string>
    <string name="lvl_nname">Nick Name</string>

    <string name="lvl_gender">Gender</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>

    <string name="lvl_role_in_sch">Role in School</string>
    <string name="text_student">Student</string>
    <string name="text_Staff">Staff</string>
    <string name="lvl_material_status">Material Status</string>
    <string name="lvl_dob">Date of Birth</string>
    <string name="lvl_additional_info">Additional Information</string>
    <string name="lvl_upload_image">Upload Image...</string>

    <string name="text_button_next1">Next (1/4)</string>
    <string name="text_button_next2">Next (2/4)</string>
    <string name="text_button_next3">Next (3/4)</string>


    <string name="title_contact_info">Contact Information</string>
    <string name="lvl_current_add">Current Address</string>
    <string name="lvl_country">Country</string>

    <string name="lvl_state">State</string>
    <string name="lvl_city">City</string>
    <string name="lvl_postal_code">Postal Code</string>
    <string name="lvl_mobile_no">Mobile No</string>
    <string name="lvl_phone_no">Phone No</string>
    <string name="lvl_email">Email<font color='@color/color1'>\u002A</font></string>
    <string name="lvl_chk_is_permanent">Is Permanent address same as Current address?</string>

    <string name="title_permanent_add">Permanent Address</string>

    <string name="title_academic_info">Academic Information</string>
    <string name="lvl_admission_no">Admission No<font color='@color/color1'>\u002A</font></string>
    <string name="lvl_batch_of">Batch of<font color='@color/color1'>\u002A</font></string>
    <string name="lvl_year_of_join">Year of joinning</string>
    <string name="lvl_year_of_leaving">Year of leaving</string>
    <string name="lvl_house">House</string>
    <string name="lvl_choose_chapter">Choose Chapter</string>

    <string name="title_professional_info">Professional Information</string>
    <string name="lvl_organization_name">Organization Name</string>
    <string name="lvl_industry">Industry</string>
    <string name="lvl_designation">Designation</string>

    <string name="lvl_linkedin_profile_link">Linkedin Profile link</string>
    <string name="button_upload_file">Upload your resume</string>
    <string name="text_pdf_docs">Only PDF or Docx</string>
    <string name="finish">Finish (4/4)</string>
    <string name="or">OR</string>
    <string name="fb_login">CONNECT WITH FACEBOOK</string>
    <string name="add_data_manually">ADD DATA MANUALLY</string>
    <string name="text_empty_fname">First Name &amp; Last Name can not be empty</string>
    <string name="text_empty_email">Email can not be empty</string>
    <string name="text_empty_admition">Admission No &amp; Batch of can not be empty</string>
    <string name="title_select_ch">Select Chapters</string>
    <string name="send_successfully">Request Sent Successfully</string>
    <string name="send_mail">You will receive an email shortly.</string>
    <string name="text_select_chap">Only two chapters are allowed</string>
    <string name="title_register_process">Choose Registration Method</string>
    <string name="title_comments">6 Comments</string>
    //surinder strings

    <string name="members">Members</string>
    <string name="store">Store</string>
    <string name="newsandevents">News And Events</string>
    <string name="more">More</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="listview_header_hint_normal">pull to refresh</string>
    <string name="listview_header_hint_release">release to start refresh</string>
    <string name="listview_loading">loading...</string>
    <string name="nomore_loading">no more to be loaded</string>
    <string name="refreshing">refreshing...</string>
    <string name="refresh_done">refresh done</string>
    <string name="listview_header_last_time">last update：</string>
    <string name="about">About</string>
    <string name="dummyLarge">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.  It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially. unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.  It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially. unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>


    <string name="action_settings">Settings</string>
    <string name="personal_information">Personal Information</string>
    <string name="contact_information">Contact Information</string>
    <string name="aceademic_info">Academic Information</string>
    <string name="professional_info">Professional Information</string>

    <string name="dashboard">Dashboard</string>
    <string name="notification">Notification</string>
    <string name="calender">Calender</string>
    <string name="example">Circular</string>
    <string name="donations">Donations</string>
    <string name="share">Share</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="menu">Menu</string>


    <string name="privacy_policy">Privacy Policy</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="no_data">No DATA</string>
    <string name="reply">Reply</string>
    <string name="report">Report Abuse</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="calendar">Calendar</string>
    <string name="events">Events</string>
    <string name="reportAbuse">Report Abuse</string>
    <string name="txt_image_uploaded">Image Uploaded</string>

</resources>
