<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.MainActivitySurinder">


    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout"
        android:fitsSystemWindows="false"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@+id/bottomLayout"
        android:background="@color/appGrey"
        />

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:weightSum="4">


        <LinearLayout
            android:id="@+id/bottomButtonMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/three_dp"
                android:src="@drawable/member"/>

            <com.think360.schoolshare.surinder.utils.font.CenturyGothicRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/members"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomButtonStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/three_dp"
                android:src="@drawable/small_store"/>

            <com.think360.schoolshare.surinder.utils.font.CenturyGothicRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/store"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomButtonNewsAndEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView

                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/three_dp"
                android:src="@drawable/small_news_event"/>

            <com.think360.schoolshare.surinder.utils.font.CenturyGothicRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/newsandevents"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomButtonMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/three_dp"
                android:src="@drawable/more"/>

            <com.think360.schoolshare.surinder.utils.font.CenturyGothicRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/more"
                android:textSize="10sp"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
